# prate_rust

./: 2  Cargo.toml  README.md
src/: main.rs
src/connection/: broadcast.rs  connect.rs  mod.rs  send_message.rs
src/handlers/: mod.rs
src/handlers/auth/: create.rs  delete.rs  get.rs  mod.rs  resposes.rs
src/handlers/messaging/: broadcast.rs  connect.rs  disconnect.rs  send_message.rs
src/handlers/misc/: health_check.rs  not_found.rs
src/models/: users.rs
static/: 404.html  main.html
